Fix mobile zoom issue by adding viewport meta tag and adjusting CSS for overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,15 @@
   /* background-color: #fff; */
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 /* globals.css */
 @font-face {
   font-family: 'Sensation-Regular';
